MDEV-6996: SET STATEMENT default_week_format = .. has no effect

Change constant with a system variable.